fix: 提高 r-tooltip 的 z-index 避免被左侧导航遮挡，并且设置最大宽度

--- a/src/components/tooltip/_tooltip.scss
+++ b/src/components/tooltip/_tooltip.scss
@@ -5,6 +5,8 @@
   top: 300px;
   left: 30px;
   padding: 4px;
+  z-index: 10;
+  max-width: 500px;
 
   .r-tooltip-popup-inner{
     padding: 5px 10px;
